--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="profile" href="https://gmpg.org/xfn/11">
         <link rel="pingback" href="https://atpltheorynotes.com/xmlrpc.php">
-        <title>ATPL Theory Notes &#8211; Be successful</title>
+        <title>REVISION ATPL NOTES &#8211; SAVE YOURSELF</title>
 <meta name='robots' content='max-image-preview:large' />
 <link rel='dns-prefetch' href='https://fonts.googleapis.com/' />
 <link rel="alternate" type="application/rss+xml" title="ATPL Theory Notes &raquo; Feed" href="feed" />
